# ChangeLog for games-misc/katawa-shoujo
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-misc/katawa-shoujo/ChangeLog,v 1.5 2013/08/30 21:59:09 hasufell Exp $

*katawa-shoujo-1.1 (30 Aug 2013)

  30 Aug 2013; Julian Ospald <hasufell@gentoo.org> +katawa-shoujo-1.1.ebuild:
  version bump wrt #469598

  23 May 2013; Sergey Popov <pinkbyte@gentoo.org> katawa-shoujo-1.0-r1.ebuild:
  Non-maintainer commit: fix SRC_URI wrt bug #469710

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*katawa-shoujo-1.0-r1 (28 Feb 2013)

  28 Feb 2013; Julian Ospald <hasufell@gentoo.org> -katawa-shoujo-1.0.ebuild,
  +katawa-shoujo-1.0-r1.ebuild:
  add system-renpy useflag and fix bug #459742

*katawa-shoujo-1.0 (27 Feb 2013)

  27 Feb 2013; Julian Ospald <hasufell@gentoo.org> +katawa-shoujo-1.0.ebuild,
  +metadata.xml:
  initial import from Maks Verver