@@ -1,6 +1,12 @@
 # ChangeLog for games-misc/katawa-shoujo
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/katawa-shoujo/ChangeLog,v 1.5 2013/08/30 21:59:09 hasufell Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-misc/katawa-shoujo/ChangeLog,v 1.6 2014/05/31 11:58:01 hasufell Exp $
+
+*katawa-shoujo-1.1-r1 (31 May 2014)
+
+  31 May 2014; Julian Ospald <hasufell@gentoo.org> -katawa-shoujo-1.1.ebuild,
+  +katawa-shoujo-1.1-r1.ebuild:
+  fix deps wrt #495270
 
 *katawa-shoujo-1.1 (30 Aug 2013)
 
